fix: address white background at bottom of screen on mobile bug

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,3 @@
-html {
-  height: -webkit-fill-available;
-}
-
 body {
   font-family: "Inter Tight", Arial, Helvetica, sans-serif;
   color: white;
@@ -10,7 +6,6 @@ body {
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  min-height: -webkit-fill-available;
 }
 
 h2 {
